@@ -1,5 +1,5 @@
 #ifndef lint
-static const char RCSid[] = "$Id: mkillum.c,v 2.32 2007/12/08 01:43:09 greg Exp $";
+static const char RCSid[] = "$Id: mkillum.c,v 2.33 2007/12/13 07:03:37 greg Exp $";
 #endif
 /*
  * Make illum sources for optimizing rendering process
@@ -306,7 +306,7 @@ xoptions(			/* process options in string s */
 			}
 			if (!*++cp || isspace(*cp))
 				continue;
-			if (isintd(++cp, " \t\n\r")) {
+			if (isintd(cp, " \t\n\r")) {
 				thisillum.sampdens = atoi(cp);
 			} else {
 				atos(buf, sizeof(buf), cp);
@@ -383,7 +383,7 @@ xoptions(			/* process options in string s */
 				break;
 			case 'z':
 			case 'Z':
-				thisillum.udir = negax ? UDxneg : UDxpos;
+				thisillum.udir = negax ? UDzneg : UDzpos;
 				break;
 			default:
 				thisillum.udir = UDunknown;
